# batalha-naval

./: .gitignore  DECISIONS.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
batalha_naval/: batalha_naval  board.py  game.py  loop.py  strategy.py  utils.py
tests/: test_board.py  test_game.py  test_loop.py  test_mtcs_strategy.py  test_random_strategy.py  test_sample.py  test_smart_strategy.py  test_strategy.py
web/: app.js  constants.js  index.html  placement.js  render.js  state.js  style.css  ui.js  worker.js
