[project]
name = "batalha-naval"
version = "0.1.0"
description = ""
authors = [
    {name = "lemuel-manske",email = "lemuelkauemanskede.liz@philips.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)"
]
