[project]
name = "batalha-naval"
version = "0.0.0"
description = "A simple implementation of the classic Battleship game in Python, enhanced by AI."
authors = [
    {name = "lemuel-manske", email = "lemuelkaue@gmail.com"}
    {name = "FabioFelsky"}
    {name = "Lucasgustzaki"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.1,<2.0.0)"
]
